--- a/assets/css/core/reset.css
+++ b/assets/css/core/reset.css
@@ -22,7 +22,8 @@ h6 {
 }
 
 body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: "Fira Code", monospace;
+    /* font-family: "Comfortaa", cursive; */
     font-size: 18px;
     line-height: 1.6;
     word-break: break-word;
@@ -100,8 +101,8 @@ textarea {
 }
 
 button,
-input[type=button],
-input[type=submit] {
+input[type="button"],
+input[type="submit"] {
     cursor: pointer;
 }
 
